[tool.poetry]
name = "dimensional-trouble"
version = "0.1.0"
description = ""
authors = ["bydariogamer <bydariogamer@inventati.org>"]
license = "GNU General Public License v3.0+"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
